moved and changed things around

--- a/resume.tex
+++ b/resume.tex
@@ -135,24 +135,6 @@
       {Bachelor of Science in Computer Science}{\textbf{GPA:} 3.0}
   \resumeSubHeadingListEnd
 
-%-----------EXPERIENCE-----------
-\section{Experience}
-  \resumeSubHeadingListStart
-
-    \resumeSubheading
-      {College at Home Advisor}{May 2023 -- July 2023}
-      {Apple}{Remote}
-      \resumeItemListStart
-        %\resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
-        \resumeItem{Delivered quick technical remote support to customer's devices which included iOS, iPhones, and iPads}
-        %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
-        \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
-        \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
-        %\resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
-        \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, earning 80\%+ customer satisfaction ratings}
-      \resumeItemListEnd
-  \resumeSubHeadingListEnd
-
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
@@ -164,17 +146,17 @@
             %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
             \resumeItem{Self-assign GitHub issues, resolve them, and submit pull requests for leader approval to ensure smooth integration}
             %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
-            \resumeItem{Improving UI through tech stacks, creating responsive, user-friendly designs}
-            \resumeItem{Currently slated to be in development for an academic year, targeting launch before Spring 2025 registration}
+            \resumeItem{Improving UI through tech stacks, creating responsive, user-friendly designs using Figma}
+            \resumeItem{Slated to be in development for an academic year, targeting launch before Spring 2025 registration}
           \resumeItemListEnd
 
       \resumeProjectHeading
           {\textbf{Image Segmentation - Students in Computing and AI} $|$ \emph{PyTorch, U-Net}}{September 2024 -- Present}
           \resumeItemListStart
-            \resumeItem{}
-            \resumeItem{}
-            \resumeItem{}
-            \resumeItem{}
+            \resumeItem{Collaborating with team of 5 peers under PhD supervision to develop 3 image segmentation prototypes}
+            \resumeItem{Conducting self-research on neural network-based segmentation techniques to deepen personal expertise by 50\% beyond previous personal experience through testing and refinement}
+            \resumeItem{Designing U-Net models for leaf segmentation to achieve 80-90\% accuracy in leaf type classification}
+            \resumeItem{Utilizing PyTorch to create image segmentation models, progressing through an entire 10-week project lifecycle}
           \resumeItemListEnd
 
       \resumeProjectHeading
@@ -199,8 +181,26 @@
 
     \resumeSubHeadingListEnd
 
+%-----------EXPERIENCE-----------
+\section{Experience}
+  \resumeSubHeadingListStart
+
+    \resumeSubheading
+      {College at Home Advisor}{May 2023 -- July 2023}
+      {Apple}{Remote}
+      \resumeItemListStart
+        %\resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
+        \resumeItem{Delivered quick technical remote support to customer's devices which included iOS, iPhones, and iPads}
+        %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
+        \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
+        \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
+        %\resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
+        \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, earning 80\%+ customer satisfaction ratings}
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
+
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
+\section{Technical and Soft Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Spoken Languages:}{ English, Spanish} \\
