--- a/resume.tex
+++ b/resume.tex
@@ -189,23 +189,15 @@
       {College at Home Advisor}{May 2023 -- July 2023}
       {Apple}{Remote}
       \resumeItemListStart
-<<<<<<< HEAD
-        \resumeItem{Trained to solve technical issues in customer's devices which included iOS, iPhones, iPads, and Mac}
-        \resumeItem{Learned to troubleshoot iOS software and provided exceptional guidance to customers in a remotely manner}
-        \resumeItem{Adapted quickly to new software updates and tools, ensuring proficiency in the latest Apple products and services }
-        \resumeItemListEnd
-    \resumeSubHeadingListEnd
-=======
         %\resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
         \resumeItem{Delivered quick technical remote support to customer's devices which included iOS, iPhones, and iPads}
         %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
         \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
-        \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
+        \resumeItem{Adapted swiftly to new software updates and tools, ensuring proficiency in the latest Apple products and services}
         %\resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
         \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, earning 80\%+ customer satisfaction ratings}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
->>>>>>> 56b013238d21b5f07ea41e3b556eddbefadb5a0f
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical and Soft Skills}
