--- a/resume.tex
+++ b/resume.tex
@@ -193,7 +193,7 @@
         \resumeItem{Delivered quick technical remote support to customer's devices which included iOS, iPhones, and iPads}
         %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
         \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
-        \resumeItem{Adapted swiftly to new software updates and tools, ensuring profiency in the latest Apple products and services}
+        \resumeItem{Adapted swiftly to new software updates and tools, ensuring proficiency in the latest Apple products and services}
         %\resumeItem{Utilized problem-solving skills to diagnose and resolve issues, achieving high customer satisfaction ratings}
         \resumeItem{Utilized problem-solving skills to diagnose and resolve issues, earning 80\%+ customer satisfaction ratings}
       \resumeItemListEnd
