added HackUTA2024 project

--- a/resume.tex
+++ b/resume.tex
@@ -160,6 +160,15 @@
           \resumeItemListEnd
 
       \resumeProjectHeading
+          {\textbf{Crop 'n' Drip - HackUTA2024} $|$ \emph{Python, C, Microsoft Azure, Azure Service Bus}}{October 2024}
+          \resumeItemListStart
+            \resumeItem{Participated with a team of four to solve water consumption challenges, securing 3rd place out of 122 teams to deliver a complete solution under the challenging 24-hour project lifecycle for a hackathon}
+            \resumeItem{Configured Azure cloud communication with a Raspberry Pi using a publisher/subscriber model, allowing message reception with a 3-second latency for efficient command delivery}
+            \resumeItem{Constructed a relay control system on the Raspberry Pi for motor automation, enabling farmers to send commands that activate the relay with a 1-second response time and visual and sound cues for reliability}
+            \resumeItem{Applied the OpenWeatherMap API for live weather updates (location, temperature, humidity) on a web feed, enhancing real-time irrigation data for informed decisions}
+          \resumeItemListEnd
+
+      \resumeProjectHeading
           {\textbf{Simple Unix Shell} $|$ \emph{C, GitHub Codespace}}{September 2024}
           \resumeItemListStart
             \resumeItem{Created a command line interpreter in C to further understand shell architecture and process management}
