--- a/resume.tex
+++ b/resume.tex
@@ -132,7 +132,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Texas at Arlington, Arlington TX}{December 2025}
-      {Bachelor of Science in Computer Science}{\textbf{GPA:} 3.0}
+      {Bachelor of Science in Computer Science}{}
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
@@ -165,7 +165,7 @@
             \resumeItem{Participated with a team of four to solve water consumption challenges, securing 3rd place out of 122 teams to deliver a complete solution under the challenging 24-hour project lifecycle for a hackathon}
             \resumeItem{Configured Azure cloud communication with a Raspberry Pi using a publisher/subscriber model, allowing message reception with a 3-second latency for efficient command delivery}
             \resumeItem{Constructed a relay control system on the Raspberry Pi for motor automation, enabling farmers to send commands that activate the relay with a 1-second response time and visual and sound cues for reliability}
-            \resumeItem{Applied the OpenWeatherMap API for live weather updates (location, temperature, humidity) on a web feed, enhancing real-time irrigation data for informed decisions}
+            \resumeItem{Applied the OpenWeatherMap API for live weather updates (location, temperature, humidity) to be used on a web feed, enhancing real-time irrigation data for informed decisions}
           \resumeItemListEnd
 
       \resumeProjectHeading
