--- a/resume.tex
+++ b/resume.tex
@@ -139,10 +139,10 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{'UTA Grades'} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next,js, Firebase, Figma}}{September 2024 -- Present}
+          {\textbf{'UTA Grades'} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next.js, Firebase, Figma}}{September 2024 -- Present}
           \resumeItemListStart
             %\resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
-            \resumeItem{Building a cross-functional professor rating website using real data from 2017 onward with a team of 20 developers}
+            \resumeItem{Building a cross-functional professor rating website using real data from 2017 onwards with a team of 20 developers}
             %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
             \resumeItem{Self-assign GitHub issues, resolve them, and submit pull requests for leader approval to ensure smooth integration}
             %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
@@ -198,8 +198,8 @@
       {College at Home Advisor}{May 2023 -- July 2023}
       {Apple}{Remote}
       \resumeItemListStart
-        %\resumeItem{Quickly mastered troubleshooting customer's devices which included iOS, iPhones, and iPads}
-        \resumeItem{Delivered quick technical remote support to customer's devices which included iOS, iPhones, and iPads}
+        %\resumeItem{Quickly mastered troubleshooting customers' devices which included iOS, iPhones, and iPads}
+        \resumeItem{Delivered quick technical remote support to customers' devices which included iOS, iPhones, and iPads}
         %\resumeItem{Efficiently managed customer inquiries, handling calls within a minute of each other in a fast-paced environment}
         \resumeItem{Efficiently managed customer inquiries, handling 15+ calls daily within a minute of each other}
         \resumeItem{Adapted swiftly to new software updates and tools, ensuring proficiency in the latest Apple products and services }
@@ -214,7 +214,7 @@
     \small{\item{
      \textbf{Spoken Languages:}{ English, Spanish} \\
      \textbf{Programming Languages:}{ C, Python, Java, C++} \\
-     \textbf{Developer Tools:}{ GitHub, Visual Studio Code, Sublime Text, Google Colab} \\
+     \textbf{Development Tools:}{ GitHub, Visual Studio Code, Sublime Text, Google Colab} \\
      %\textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
