added IoT to hackuta

--- a/resume.tex
+++ b/resume.tex
@@ -162,7 +162,7 @@
       \resumeProjectHeading
           {\textbf{Crop 'n' Drip - HackUTA2024} $|$ \emph{Python, C, Microsoft Azure, Azure Service Bus}}{October 2024}
           \resumeItemListStart
-            \resumeItem{Participated with a team of four to solve water consumption challenges, securing 3rd place out of 122 teams to deliver a complete solution under the challenging 24-hour project lifecycle for a hackathon}
+            \resumeItem{Participated with a team of four to solve water consumption challenges using an IoT environment, securing 3rd place out of 122 teams to deliver a complete project under the challenging 24-hour project lifecycle for a hackathon}
             \resumeItem{Configured Azure cloud communication with a Raspberry Pi using a publisher/subscriber model, allowing message reception with a 3-second latency for efficient command delivery}
             \resumeItem{Constructed a relay control system on the Raspberry Pi for motor automation, enabling farmers to send commands that activate the relay with a 1-second response time and visual and sound cues for reliability}
             \resumeItem{Applied the OpenWeatherMap API for live weather updates (location, temperature, humidity) to be used on a web feed, enhancing real-time irrigation data for informed decisions}
@@ -220,14 +220,14 @@
  \end{itemize}
 
 %-----------ORGANIZATIONS-----------
-\section{Organizations}
+%\section{Organizations}
 
-\resumeSubHeadingListStart
-    \resumeItem{\textbf{Association for Computing Machinery}, Member}
-    \resumeItem{\textbf{Society of Women Engineers}, Member}
-    \resumeItem{\textbf{Society of Hispanic Professional Engineers}, Member}
-    \resumeItem{\textbf{Students in Computing and Artificial Intelligence}, Member}
-\resumeSubHeadingListEnd
+%\resumeSubHeadingListStart
+%   \resumeItem{\textbf{Association for Computing Machinery}, Member}
+%    \resumeItem{\textbf{Society of Women Engineers}, Member}
+%    \resumeItem{\textbf{Society of Hispanic Professional Engineers}, Member}
+%    \resumeItem{\textbf{Students in Computing and Artificial Intelligence}, Member}
+%\resumeSubHeadingListEnd
 
 
 %-------------------------------------------
