improved UTA grades

--- a/resume.tex
+++ b/resume.tex
@@ -142,9 +142,10 @@
           {\textbf{'UTA Grades'} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next.js, Firebase, Figma}}{September 2024 -- Present}
           \resumeItemListStart
             %\resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
-            \resumeItem{Building a cross-functional professor rating website using real data from 2017 onwards with a team of 20 developers}
+            %\resumeItem{Building a cross-functional professor rating website using real data from 2017 onwards with a team of 20 developers}
             %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
-            \resumeItem{Self-assign GitHub issues, resolve them, and submit pull requests for leader approval to ensure smooth integration}
+            \resumeItem{Collaborating with a team of 20 developers to build an open-source, cross-functional professor rating website utilizing real data from 2017 onwards, enhancing student decision-making during course selection}
+                        \resumeItem{Take initiative to self-assign GitHub issues, quickly resolve them, and submit pull requests for review and approval from team leaders, ensuring a smooth integration of code changes and fostering collaboration}
             %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
             \resumeItem{Improving UI through tech stacks, creating responsive, user-friendly designs using Figma}
             \resumeItem{Slated to be in development for an academic year, targeting launch before Spring 2025 registration}
@@ -162,7 +163,7 @@
       \resumeProjectHeading
           {\textbf{Crop 'n' Drip - HackUTA2024} $|$ \emph{Python, C, Microsoft Azure, Azure Service Bus}}{October 2024}
           \resumeItemListStart
-            \resumeItem{Participated with a team of four to solve water consumption challenges using an IoT environment, securing 3rd place out of 122 teams to deliver a complete project under the challenging 24-hour project lifecycle for a hackathon}
+            \resumeItem{Participated with a team of four to solve water consumption challenges using an IoT environment, securing 3rd place out of 122 teams to deliver a complete project under a challenging 24-hour project lifecycle}
             \resumeItem{Configured Azure cloud communication with a Raspberry Pi using a publisher/subscriber model, allowing message reception with a 3-second latency for efficient command delivery}
             \resumeItem{Constructed a relay control system on the Raspberry Pi for motor automation, enabling farmers to send commands that activate the relay with a 1-second response time and visual and sound cues for reliability}
             \resumeItem{Applied the OpenWeatherMap API for live weather updates (location, temperature, humidity) to be used on a web feed, enhancing real-time irrigation data for informed decisions}
