--- a/resume.tex
+++ b/resume.tex
@@ -214,7 +214,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Spoken Languages:}{ English, Spanish} \\
-     \textbf{Programming Languages:}{ C, Python, Java, C++} \\
+     \textbf{Programming Languages:}{ C, Python, Java, C++, SQL} \\
      \textbf{Development Tools:}{ GitHub, Visual Studio Code, Sublime Text, Google Colab} \\
      %\textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
