--- a/resume.tex
+++ b/resume.tex
@@ -137,6 +137,28 @@
 
 %-----------PROJECTS----------- aasdfasdfasdf
 %\section{Projects}
+%    \resumeSubHeadingListStart
+%      \resumeProjectHeading
+%          {\textbf{'UTA Grades'} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next.js, Firebase, Figma}}{September 2024 -- Present}
+%          \resumeItemListStart
+%            %\resumeItem{Collaborating with 20+ developers to build an open-source professor rating website using data from 2017 onward}
+%            %\resumeItem{Building a cross-functional professor rating website using real data from 2017 onwards with a team of 20 developers}
+%            %\resumeItem{Streamlining GitHub issue tracking, ensuring smooth integration and project manager approval}
+%            \resumeItem{Collaborating with a team of 20 developers to build an open-source, cross-functional professor rating website utilizing real data from 2017 % onwards, enhancing student decision-making during course selection}
+%                        \resumeItem{Take initiative to self-assign GitHub issues, quickly resolve them, and submit pull requests for review and approval from team % leaders, ensuring a smooth integration of code changes and fostering collaboration}
+%            %\resumeItem{Improving UI through Figma mockups and Tailwind CSS, creating responsive, user-friendly designs}
+%            \resumeItem{Improving UI through tech stacks, creating responsive, user-friendly designs using Figma}
+%            \resumeItem{Slated to be in development for an academic year, targeting launch before Spring 2025 registration}
+%          \resumeItemListEnd
+
+%      \resumeProjectHeading
+%          {\textbf{Image Segmentation - Students in Computing and AI} $|$ \emph{PyTorch, U-Net}}{September 2024 -- Present}
+%          \resumeItemListStart
+%            \resumeItem{Collaborating with team of 5 peers under PhD supervision to develop 3 image segmentation prototypes}
+%            \resumeItem{Conducting self-research on neural network-based segmentation techniques to deepen personal expertise by 50\% beyond previous personal %experience through testing and refinement}
+%            \resumeItem{Designing U-Net models for leaf segmentation to achieve 80-90\% accuracy in leaf type classification}
+%            \resumeItem{Utilizing PyTorch to create image segmentation models, progressing through an entire 10-week project lifecycle}
+%          \resumeItemListEnd
 
       \resumeProjectHeading
           {\textbf{Crop 'n' Drip - HackUTA2024} $|$ \emph{Python, C, Microsoft Azure, Azure Service Bus}}{October 2024}
