--- a/resume.tex
+++ b/resume.tex
@@ -137,7 +137,7 @@
 
 %-----------PROJECTS----------- aasdfasdfasdf
 %\section{Projects}
-%    \resumeSubHeadingListStart
+  \resumeSubHeadingListStart
 %      \resumeProjectHeading
 %          {\textbf{'UTA Grades'} $|$ \emph{GitHub Codespace, HTML, Tailwind CSS, Next.js, Firebase, Figma}}{September 2024 -- Present}
 %          \resumeItemListStart
